# reup

./: .gitignore  63e15d57-0648-4816-b08c-10dd2b64ee85_zh.txt  AGENTS.md  PROJECT_PLAN.md  README.md  TODO.md  Untitled-1.txt  gui.py  gui1.py  gui2.py  gui3.py  gui_with_srt.py  requirements.txt  reup_config.json
.cursor/rules/: reup-video.mdc
contract/: CONTRACT.md
contract/examples/: error-http-401.json  get-job-completed.json  get-job-failed.json  post-job-request.json
contract/schemas/: error-response.json  health-response.json  job-create-request.json  job-status-response.json
laravel/: .env.example
laravel/app/Models/: SourceVideo.php  VideoJob.php
laravel/app/Services/: VideoWorkerClient.php
laravel/config/: services.php  video_storage.php  video_worker.php
laravel/database/migrations/: 2026_05_04_120000_create_video_jobs_table.php  2026_05_21_100000_create_source_videos_table.php  2026_05_21_100001_add_source_video_id_to_video_jobs_table.php
laravel/resources/views/: dashboard.blade.php  download.blade.php  history.blade.php  job-detail.blade.php  process.blade.php  settings.blade.php  upload.blade.php
laravel/routes/: web.php
laravel/tests/Feature/: VideoDownloadCommandTest.php  VideoProcessCommandFailedTest.php  VideoProcessCommandTest.php  VideoProcessSourceVideoTest.php
worker/: .env.example  README.md  pyproject.toml  test_translate.py
worker/src/video_worker/: app.py  errors.py  ffmpeg_util.py  jobs_store.py  main.py  pipeline.py  settings.py  srt_utils.py
worker/tests/: conftest.py  test_api.py  test_ffmpeg_util.py
(+14 files in other folders)
