[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "reup-video-worker"
version = "0.1.0"
description = "Local ML/ffmpeg worker for reup-video pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.6.0",
  "edge-tts>=7.0.0",
]

[project.optional-dependencies]
asr = ["faster-whisper>=1.0.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
video-worker = "video_worker.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"
